add: more styles to context menu

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+
+<!-- force dark theme for now -->
+<html
+	lang="en"
+	data-theme="dark"
+>
 	<head>
 		<meta charset="utf-8" />
 		<link
