bugfix: delete key now requires meta or ctrl key --> unmodified backspace/delete keys to control form inputs again

--- a/src/app.html
+++ b/src/app.html
@@ -15,9 +15,14 @@
 			name="viewport"
 			content="width=device-width"
 		/>
+		<!-- leaving this here as the installed version only renders on the first load in firefox -- wtf? -->
 		<link
 			rel="stylesheet"
 			href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="/css/pico.min.css"
 		/>
 		%sveltekit.head%
 	</head>
