can create account, login

--- a/src/app.html
+++ b/src/app.html
@@ -24,6 +24,10 @@
 			rel="stylesheet"
 			href="/css/pico.min.css"
 		/>
+		<!-- <link
+			rel="stylesheet"
+			href="app.css"
+		/> -->
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
